<resources>
    <string name="app_name">HW</string>
    <string name="activity_label_1">label1</string>
    <string name="expl_activity_text">Активити, созданная с помощью явного интента :)</string>
    <string name="ok_btn_txt">ОК</string>
    <string name="cancel_btn_txt">ОТМЕНА</string>
    <string name="input_text_view">Введите текст</string>
    <string name="correct_input_txt">Текст введен верно</string>
    <string name="incorrect_input_txt">Текст введен неверно</string>
    <string name="share_btn">Поделиться</string>
    <string name="next_btn">Проверить</string>
    <string name="temp_txt">textView</string>
    <string name="add_activity_txt">Добавить явную активити</string>
    <string name="to_fragm_act">Работа с фрагментами</string>
    <string name="inp_x">Введите первое число</string>
    <string name="inp_y">Введите второе число</string>
    <string name="back_btn_txt">Назад</string>
    <string name="choose_op">Выберете действие</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
